[package]
name = "kurtosis_rust_lib"
version = "0.1.0"
authors = ["mieubrisse <mieubrisse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
simple-error = "0.2.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.0"

[build-dependencies]
anyhow = "1.0.38"
# Must be kept in sync with the "tonic" version above, because Cargo.toml doesn't support envvars yet
# See: https://github.com/rust-lang/cargo/issues/4221
tonic-build = "0.4.0"