[package]
name = "kurtosis-rust-lib"
version = "0.1.0"
authors = ["mieubrisse <mieubrisse@gmail.com>"]
edition = "2018"

[[bin]]
name = "kurtosis-rust-example"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kurtosis-rust-lib = { path = "../lib" }