[package]
name = "kurtosis_rust_example"
version = "0.1.0"
authors = ["mieubrisse <mieubrisse@gmail.com>"]
edition = "2018"

[[bin]]
name = "kurtosis_rust_example"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurtosis_rust_lib = { path = "../lib" }
reqwest = "0.11.0"
log = "0.4"
pretty_env_logger = "0.4"
