[package]
name = "kurtosis_rust_example"
version = "0.1.0"
authors = ["mieubrisse <mieubrisse@gmail.com>"]
edition = "2018"

[[bin]]
name = "kurtosis_rust_example"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
futures = "0.3"
kurtosis_rust_lib = { path = "../lib" }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.11.0"
simple-error = "0.2.3"
tonic = "0.4.0"